syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint.airbyte;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint/airbyte;tm_server_airbyte_endpoint";

import "yandex/cloud/priv/sensitive.proto";

message S3Source {
    message Format {
        oneof format {
            Csv csv = 4;
            Parquet parquet = 5;
        }
    }
    message Provider {
        string bucket = 1;
        string aws_access_key_id = 2 [(sensitive) = true];
        string aws_secret_access_key = 3 [(sensitive) = true];
        string path_prefix = 4;
        string endpoint = 5;
        bool use_ssl = 6;
        bool verify_ssl_cert = 7;
    }
    message Csv {
        string delimiter = 2;
        string quote_char = 3;
        string escape_char = 4;
        string encoding = 5;
        bool double_quote = 6;
        bool newlines_in_values = 7;
        int64 block_size = 8;
        string additional_reader_options = 9;
        string advanced_options = 10;
    }
    message Parquet {
        int64 buffer_size = 2;
        repeated string columns = 3;
        int64 batch_size = 4;
    }
    string dataset = 1;
    string path_pattern = 2;
    string schema = 3;
    Format format = 5;
    Provider provider = 6;
}
