syntax = "proto3";

package yandex.cloud.priv.schemaregistry.v1;

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/schemaregistry";

import "google/protobuf/descriptor.proto";

import "google/api/annotations.proto";
import "cloud/dataplatform/api/schemaregistry/schema.proto";
import "cloud/dataplatform/api/schemaregistry/namespace.proto";

service NamespaceService {
    rpc List(ListNamespacesRequest) returns (ListNamespacesResponse) {
        option (google.api.http) = {
            get: "/v1/namespaces"
        };
    }
    rpc Get(GetNamespaceRequest) returns (GetNamespaceResponse) {
        option (google.api.http) = {
            get: "/v1/namespaces/{id}"
        };
    }
    rpc Create(CreateNamespaceRequest) returns (CreateNamespaceResponse) {
        option (google.api.http) = {
            post: "/v1/namespaces",
            body: "*"
        };
    }
    rpc Update(UpdateNamespaceRequest) returns (UpdateNamespaceResponse) {
        option (google.api.http) = {
            put: "/v1/namespaces/{id}",
            body: "*"
        };
    }
    rpc Delete(DeleteNamespaceRequest) returns (DeleteNamespaceResponse) {
        option (google.api.http) = {
            delete: "/v1/namespaces/{id}"
        };
    }
}

message ListNamespacesRequest {
    string folder_id = 1;
}

message ListNamespacesResponse {
    repeated string namespaces = 1;
}

message GetNamespaceRequest {
    string id = 1;
}

message GetNamespaceResponse {
    Namespace namespace = 1;
}

message CreateNamespaceRequest {
    string id = 1;
    Schema.Format format = 2;
    Schema.Compatibility compatibility = 3;
    string description = 4;
    string folder_id = 5;
}

message CreateNamespaceResponse {
    Namespace namespace = 1;
}

message UpdateNamespaceRequest {
    string id = 1;
    Schema.Format format = 2;
    Schema.Compatibility compatibility = 3;
    string description = 4;
}

message UpdateNamespaceResponse {
    Namespace namespace = 1;
}

message DeleteNamespaceRequest {
    string id = 1;
}
message DeleteNamespaceResponse {
    string message = 1;
}
