syntax = "proto3";

package yandex.cloud.priv.schemaregistry.v1;

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/schemaregistry";
import "cloud/dataplatform/api/schemaregistry/options/options.proto";

import "google/protobuf/timestamp.proto";

message Schema {
    option (yandex.cloud.priv.schemaregistry.v1.options.schemaregistry).enabled = true;

    enum Format {
        FORMAT_UNSPECIFIED = 0;
        FORMAT_PROTOBUF = 1;
        FORMAT_AVRO = 2;
        FORMAT_JSON = 3;
    }
    enum Compatibility {
        COMPATIBILITY_UNSPECIFIED = 0;
        COMPATIBILITY_BACKWARD = 1;
        COMPATIBILITY_BACKWARD_TRANSITIVE = 2;
        COMPATIBILITY_FORWARD = 3;
        COMPATIBILITY_FORWARD_TRANSITIVE = 4;
        COMPATIBILITY_FULL = 5;
        COMPATIBILITY_FULL_TRANSITIVE = 6;
    }
    string name = 1;
    Format format = 2;
    string authority = 3;
    Compatibility compatibility = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}
