syntax = "proto3";

package yandex.cloud.priv.schemaregistry.v1;

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/schemaregistry";

import "google/api/annotations.proto";
import "google/protobuf/descriptor.proto";

service SearchService {
    rpc Search(SearchRequest) returns (SearchResponse) {
        option (google.api.http) = {
            get: "/v1/search"
        };
    }
}

message SearchRequest {
    string namespace_id = 1;
    string schema_id = 2;
    string query = 3;

    oneof version {
        bool history = 4;
        int32 version_id = 5;
    }
}

message SearchResponse {
    repeated SearchHits hits = 1;
    SearchMeta meta = 2;
}

message SearchHits {
    string namespace_id = 1;
    string schema_id = 2;
    int32 version_id = 3;
    repeated string fields = 4;
    repeated string types = 5;
    string path = 6;
}

message SearchMeta {
    uint32 total = 1;
}
